# rezvangrad

./: .gitignore  CMakeLists.txt  README.md  example
examples/: example.cpp  example2.cpp
rezvangrad/: engine.cpp  engine.hpp  nn.cpp  nn.hpp
test/: test_engine.cpp  test_nn.cpp
